# ChatRoom

./: .gitignore  CHANGELOG.md  README.md  db.sql  justfile
.githooks/: commit-msg  post-commit  prepare-commit-msg
.github/workflows/: backup.yml  chat-server-1.yml  chat-server.yml  client-release.yml  client.yml  gateway.yml  status-server.yml  verify-code.yml
chatroom/: .clangd  .gitignore  CMakeLists.txt  Defer.hpp  README.md  bubblebase.cc  bubblebase.hpp  chatdialog.cc  chatdialog.hpp  chatdialog.ui  chatmsgitem.cc  chatmsgitem.hpp  chatmsgitem.ui  chatmsglist.cc  chatmsglist.hpp  chatpage.cc  chatpage.hpp  chatpage.ui  chattextedit.cc  chattextedit.hpp  chatuseritem.cc  chatuseritem.hpp  chatuseritem.ui  chatuserlist.cc  chatuserlist.hpp  config.ini  contactgroupitem.cc  contactgroupitem.hpp  contactgroupitem.ui  contactitem.cc  contactitem.hpp  contactitem.ui  contactlist.cc  contactlist.hpp  customlistwidget.cc  customlistwidget.hpp  findfaileddialog.cc  findfaileddialog.hpp  findfaileddialog.ui  findsuccessdialog.cc  (+57 more)
chatroom/docs/: develop.md
chatroom/resources/: app.rc  resources.qrc
chatroom/resources/style/: chat_window.qss  login_window.qss  main.qss  register_window.qss  reset_pass_window.qss
chatroom/scripts/: check-header.sh  format.sh
docs/: API.md  api.md  demo.http  deploy.md  user.http
lvs/: README.md
nginx/: README.md
proto/: chat_server.proto  status_server.proto  verify_code.proto
scripts/: deploy_client.sh  install-hooks.sh
services/Backup/: README.md  config.yaml  go.mod  main.go
services/ChatServer/: CMakeLists.txt  Config.cmake.in  README.md
services/ChatServer/benchmark/tools/: bench_logger.cc
services/ChatServer/docs/devel/: develop.md
services/ChatServer/docs/guide/: README.md
services/ChatServer/include/global/: Global.hpp  SuperQueue.hpp
services/ChatServer/scripts/: workflow.sh
services/ChatServer/src/: main.cc
services/ChatServer/src/core/: CMakeLists.txt
services/ChatServer/src/utils/: CMakeLists.txt
services/ChatServer/tests/: CMakeLists.txt
services/ChatServer/tests/global/: test_superqueue.cc
services/ChatServer/tests/tools/: test_id.cc
services/ChatServer1/: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
services/ChatServer1/benchmark/global/: bench_superqueue.cc
services/ChatServer1/benchmark/tools/: bench_id.cc
services/ChatServer1/docs/devel/: develop.md
services/ChatServer1/docs/guide/: README.md
services/ChatServer1/include/config/: Config.hpp.in
services/ChatServer1/include/global/: Global.hpp
services/ChatServer1/scripts/: install-hooks.sh
services/ChatServer1/src/: main.cc
services/ChatServer1/src/core/: CMakeLists.txt
services/ChatServer1/src/core/io/: io.cc
services/ChatServer1/src/core/logic/: logic.cc
services/ChatServer1/src/core/model/: user_do.hpp
services/ChatServer1/src/core/msg-node/: msg-node.hpp
services/ChatServer1/src/core/repository/: user_repository.cc
services/ChatServer1/src/core/server/: server.cc  server.hpp
services/ChatServer1/src/core/session/: session.cc  session.hpp
services/ChatServer1/src/utils/: CMakeLists.txt
services/ChatServer1/src/utils/common/: code.hpp
services/ChatServer1/src/utils/grpc/client/: status_server_client.hpp
services/ChatServer1/src/utils/pool/channel/: channel_pool.hpp
services/ChatServer1/src/utils/pool/mariadb/: db_pool.cc  db_pool.hpp
services/GateWay/: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
services/GateWay/benchmark/: CMakeLists.txt
services/GateWay/scripts/: format.sh
services/GateWay/src/: CMakeLists.txt  main.cc
services/GateWay/src/core/: CMakeLists.txt
services/GateWay/src/core/business/: business.cc  business.hpp
services/GateWay/src/core/connection/: connection.cc  connection.cc.http.1.0  connection.hpp
services/GateWay/src/core/controller/demo/: demo_controller.cc  demo_controller.hpp
services/GateWay/src/core/controller/user/: user_controller.cc  user_controller.hpp
services/GateWay/src/core/domain/do/user/: user_do.hpp
services/GateWay/src/core/domain/dto/demo/: demo_dto.hpp
services/GateWay/src/core/domain/dto/user/: user_dto.hpp
services/GateWay/src/core/domain/query/demo/: demo_query.hpp
services/GateWay/src/core/domain/query/user/: user_query.hpp
services/GateWay/src/core/domain/vo/: common_vo.hpp
services/GateWay/src/core/domain/vo/demo/: demo_vo.hpp
services/GateWay/src/core/domain/vo/user/: user_vo.hpp
services/GateWay/src/core/io/: io.cc  io.hpp
services/GateWay/src/core/logic/: logic.cc  logic.hpp
services/GateWay/src/core/repository/user/: user_repository.cc  user_repository.hpp
services/GateWay/src/core/server/: server.cc  server.hpp
services/GateWay/src/core/service/user/: user_service.cc  user_service.hpp
services/GateWay/src/utils/: CMakeLists.txt  code.hpp  query_parser.hpp  type.hpp
services/GateWay/src/utils/common/: code.hpp  func.hpp  jwt.hpp  rate_limit.hpp  routes.hpp  type.hpp
services/GateWay/src/utils/context/: context.cc  context.hpp
services/GateWay/src/utils/db_params/: db_params.cc  db_params.hpp
services/GateWay/src/utils/grpc/client/: status_server_client.cc  status_server_client.hpp  verify_code_client.cc  verify_code_client.hpp
services/GateWay/src/utils/grpc/verify_code/: verify_code.grpc.pb.cc  verify_code.grpc.pb.h  verify_code.pb.cc  verify_code.pb.h
services/GateWay/src/utils/pool/: channel_pool.hpp  db_params.hpp  db_pool.hpp
services/GateWay/src/utils/pool/channel/: channel_pool.cc  channel_pool.hpp
services/GateWay/src/utils/pool/mariadb/: db_pool.cc  db_pool.hpp
services/GateWay/src/utils/pool/redis/: redis_pool.cc  redis_pool.hpp
services/GateWay/src/utils/url/: url.cc  url.hpp
services/StatusServer/: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
services/StatusServer/src/: main.cc
services/StatusServer/src/utils/: CMakeLists.txt
services/VerifyCode/: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
services/VerifyCode/scripts/: format.sh
services/VerifyCode/src/: main.cc
services/VerifyCode/tests/: test.txt
(+49 files in other folders)
